Migrate from MongoDB to Appwrite Database

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,15 @@
 # Environment variables
 # Copy this file to .env.local and fill in your values
 
-# MongoDB Connection String
-MONGODB_URI=mongodb+srv://your-username:your-password@cluster.mongodb.net/devlinks?retryWrites=true&w=majority
+# Appwrite Configuration
+NEXT_PUBLIC_APPWRITE_ENDPOINT=https://cloud.appwrite.io/v1
+NEXT_PUBLIC_APPWRITE_PROJECT_ID=your-project-id
+APPWRITE_API_KEY=your-api-key
+
+# Database IDs (created automatically or manually in Appwrite Console)
+APPWRITE_DATABASE_ID=devlinks
+APPWRITE_USERS_COLLECTION_ID=users
+APPWRITE_LINKS_COLLECTION_ID=links
 
 # JWT Secret (generate a random string)
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
