--- a/package.json
+++ b/package.json
@@ -13,7 +13,12 @@
     "better-sqlite3": "^12.6.2",
     "cors": "^2.8.5",
     "express": "^5.2.1",
+    "multer": "^2.0.2",
     "node-forge": "^1.3.3",
+    "pdf-lib": "^1.17.1",
+    "pdf-parse": "^2.4.5",
+    "pdf2pic": "^3.2.0",
+    "pdfjs-dist": "^5.4.530",
     "socket.io": "^4.8.3",
     "xlsx": "^0.18.5"
   }
